fix(gallery__item): adds comment for z-index snippet

--- a/src/wtc-gallery-component.scss
+++ b/src/wtc-gallery-component.scss
@@ -64,6 +64,11 @@
     transform: scale(1) translateY(-50%);
     z-index: 1;
 
+    /*
+      z-index added to make clickable elements
+      within the active slide usable.
+    */
+
     /* focusable child elements */
     button,
     [href],
